<resources>
    <string name="app_name">Janken Team B</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_greetings">Welcome back,\nlogin to continue</string>

    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_1_label">Friend List</string>
    <string name="tab_2_label">Friend Suggestion</string>

    <string name="history_kosong">History Kosong</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_title">Add Friend</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="achievement_nsuit">Achivement\nSuit</string>
    <string name="data_kosong">Data Kosong</string>
    <string name="anda_belum_memiliki_teman">Anda Belum Memiliki Teman</string>
    <string name="tambahkan_teman_di_tab_friend_suggestion_n_untuk_permainan_yang_lebih_seru_dan_menyenangkan">Tambahkan teman di Tab Friend Suggestion\n untuk permainan yang lebih seru dan menyenangkan</string>
    <string name="empty_frame">Anda Belum Memiliki Frame</string>
    <string name="username">Username</string>
    <string name="email_email_com">email@email.com</string>
    <string name="back_button">Back Button</string>
    <string name="logo_point">Logo Point</string>
    <string name="single_player">Single Player</string>
    <string name="computer">Computer</string>
    <string name="scissor">scissor</string>
    <string name="paper">paper</string>
    <string name="rock">rock</string>
    <string name="reset_button">Reset Button</string>
    <string name="multi_player">Multi Player</string>
    <string name="player_2">Player 2</string>
    <string name="vs">VS</string>
    <string name="dummy_win">50</string>
    <string name="win">Win</string>
    <string name="dummy_lose">20</string>
    <string name="lose">Lose</string>
    <string name="dummy_draw">10</string>
    <string name="draw">Draw</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="frame_profile">Frame Profile</string>
    <string name="download_button_pdf">Download Button PDF</string>
    <string name="choose_photo_profile">Choose Photo Profile</string>
    <string name="logo_achievement">Logo Achievement</string>
    <string name="frame_picture">Frame Picture</string>
    <string name="button_add_friend">Button Add Friend</string>
    <string name="logo_janken">Logo Janken</string>
    <string name="email">Email</string>
    <string name="register_welcome_message">Please,\nregister your account</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="logout">Logout</string>
    <string name="win_titik_dua">Win :</string>
    <string name="lose_titik_dua">Lose :</string>
    <string name="draw_titik_dua">Draw :</string>
    <string name="level">Level</string>
    <string name="dummy_level">1</string>
    <string name="info_personal">Info Personal</string>
    <string name="top_score">Top Score</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="getting_data_from_server">Getting data from server…</string>
    <string name="upload_foto_caps">UPLOAD FOTO</string>
    <string name="empty_image">Empty Image</string>
    <string name="daftar_frame_caps">DAFTAR FRAME</string>
    <string name="tidak_ada_rekomendasi_teman">Tidak Ada Rekomendasi Teman</string>
    <string name="history_battle">HISTORY BATTLE</string>
    <string name="level_titik_dua">Level :</string>
    <string name="achievement">Achievement</string>
    <string name="tingkatkan_levelmu_dengan_nmengumpulkan_experience">Tingkatkan levelmu dengan\nmengumpulkan experience</string>
    <string name="sweet_suit_nshop">Sweet Suit\nShop</string>
    <string name="dummy_point">150</string>
    <string name="tidak_ada_frame_baru_yang_bisa_dibeli">Tidak ada frame baru yang bisa dibeli</string>
    <string name="dummy_achievement_title">Capai level 5</string>
    <string name="claim">Claim</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_caps">UPDATE</string>
    <string name="cancel_caps">CANCEL</string>
</resources>